remove uuid
